Redo "Migrate tests to JUnit5 (#626)" with fix (#631)
* Revert "Revert "Migrate tests to JUnit5 (#626)" (#630)"
  This reverts commit 55ca191f6fa33b6a796ee6611c1746072fae2ae6.
* revert the missing dependency in runtime scope
* revert also modifications of main code